<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Configuracion de la aplicacion -->
    <!-- https://mileem-inmuebles.herokuapp.com -->
    <string name="host">mileem-inmuebles.herokuapp.com</string>
    <string name="search_path">/publications/search.json</string>
    <string name="facebook_app_id">385283794970002</string>

    <!-- Aplicacion -->
    <string name="app_name">MiLEEM</string>
    <string name="SearchResultTitle">Resultados</string>
    <string name="action_settings">Configuración</string>
    <string name="title_activity_search_results">Resultados de la búsqueda</string>
    <string name="title_activity_publication_detail">Detalles de la publicación</string>
    <string name="price">Precio: </string>
    <string name="effective_date">Fecha de publicacion: </string>
    <string name="floor">Piso: </string>
    <string name="apartment">Departamento: </string>
    <string name="number_spaces">Ambientes:</string>
    <string name="surface">Superficie: </string>
    <string name="expenses">Expensas: </string>
    <string name="antiquity">Antiguedad: </string>
    <string name="additional_info">Información adicional: </string>
    <string name="url">Web: </string>
    <string name="numberSpaces">Ambientes: </string>
    <string name="neighbourhood_name">Barrio:</string>
    <string name="search_venta">Venta</string>
    <string name="search_alquiler">Alquiler</string>
    <string name="search_ambas">Ambas</string>
    <string name="search_button_do_search">Buscar</string>
    <string name="publication_type">Tipo:</string>
    <string name="constant.ARS">$</string>
    <string name="constant.USD">U$S</string>
    <string name="constant.since">Desde</string>
    <string name="constant.to">Hasta</string>
    <string name="SeeAddress">Ver ubicación</string>
    <string name="callAdvertiser">Escribir al anunciante</string>
    <string name="advanced_options">Opciones de búsqueda avanzadas</string>
    <string name="expenses_name">Expensas</string>
    <string name="advanced_search_basic">Basico</string>
    <string name="propertyType">Tipo de propiedad: </string>
    <string name="description">Descripción: </string>
    <string name="noResultsMessage">No se han encontrado resultados</string>
    <string name="currency_convertion">USD 1 = $ 10,00</string>
    <string name="location">Ubicación</string>

    <string-array name="property_name_array">
        <item>Todos</item>
        <item>Departamento</item>
        <item>PH</item>
        <item>Casa</item>
        <item>Terreno</item>
        <item>Oficina</item>
        <item>Local Comercial</item>
    </string-array>
    <string-array name="neighborhood_array">
        <item>Agronomía</item>
        <item>Almagro</item>
        <item>Balvanera</item>
        <item>Barracas</item>
        <item>Belgrano</item>
        <item>Boedo</item>
        <item>Caballito</item>
        <item>Chacarita</item>
        <item>Coghlan</item>
        <item>Colegiales</item>
        <item>Constitución</item>
        <item>Flores</item>
        <item>Floresta</item>
        <item>La Boca</item>
        <item>La Paternal</item>
        <item>Liniers</item>
        <item>Mataderos</item>
        <item>Monte Castro</item>
        <item>Monserrat</item>
        <item>Nueva Pompeya</item>
        <item>Núñez</item>
        <item>Palermo</item>
        <item>Parque Avellaneda</item>
        <item>Parque Chacabuco</item>
        <item>Parque Chas</item>
        <item>Parque Patricios</item>
        <item>Puerto Madero</item>
        <item>Recoleta</item>
        <item>Retiro</item>
        <item>Saavedra</item>
        <item>San Cristóbal</item>
        <item>San Nicolás</item>
        <item>San Telmo</item>
        <item>Vélez Sársfield</item>
        <item>Versalles</item>
        <item>Villa Crespo</item>
        <item>Villa del Parque</item>
        <item>Villa Devoto</item>
        <item>Villa General Mitre</item>
        <item>Villa Lugano</item>
        <item>Villa Luro</item>
        <item>Villa Ortúzar</item>
        <item>Villa Pueyrredón</item>
        <item>Villa Real</item>
        <item>Villa Riachuelo</item>
        <item>Villa Santa Rita</item>
        <item>Villa Soldati</item>
        <item>Villa Urquiza</item>
    </string-array>

    <string name="share_chooser_text">Compartir publicación</string>
    <string name="title_activity_media_details">Galería</string>

    <!-- Comparticion -->
    <string name="twitter_share">Encontré esta propiedad en MiLEEM: </string>
    <string name="facebook_share">Encontré esta propiedad en MiLEEM: </string>
    <string name="facebook_error">Necesitas instalar la aplicación de Facebook. </string>
    <string name="title_activity_price_stats">Precio por metro cuadrado</string>
    <string name="no_stats_title">No hay estadisticas</string>
    <string name="no_stats_description">No hay estadisticas disponibles para la publicacion seleccionada.</string>
    <string name="stats_price_path">/statistics/near_prices.json</string>
    <string name="room_stats_path">/statistics/spaces_distribution.json</string>
    <string name="title_activity_room_stats">Ambientes por publicación</string>

</resources>
