<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SearchPublications">
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroup">


    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_venta"
        android:id="@+id/radioButtonVenta"
        android:onClick="onRadioButtonClicked"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_alquiler"
        android:id="@+id/radioButtonAlquiler"
        android:onClick="onRadioButtonClicked"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/radioButtonVenta" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_ambas"
        android:id="@+id/radioButtonAmbas"
        android:onClick="onRadioButtonClicked"
        android:layout_toEndOf="@+id/radioButtonAlquiler"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button_do_search"
        android:id="@+id/searchButtonDoSearch"
        android:onClick="doSearch"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="190dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/neighbourhood_name"
            android:id="@+id/textView"
            android:layout_below="@+id/radioGroup"
            android:layout_alignParentStart="true"
            android:textSize="16dp"
            android:layout_column="0"
            android:layout_weight="1" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/publication_type"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentEnd="true">

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchSpinnerNeighborhood"
            android:entries="@array/neighborhood_array"
            android:layout_toEndOf="@+id/textView"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/searchButtonDoSearch"
            android:layout_column="0"
            android:layout_weight="1" />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/publication_type_array"
            android:id="@+id/searchSpinnerType"
            android:layout_column="1"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>
